# difference_between_file

./: .gitingnore  Makefile  README.MD  docker-compose.yml  main.py  pyproject.toml
deploy/disagreement/: Dockerfile
disagreement/: __init__.py  __main__.py  acceptable.py  main.py
disagreement/config/: __init__.py  default.py  utils.py
disagreement/endpoints/: __init__.py  home.py  uploaddocs.py
disagreement/schemas/: input_data.py
disagreement/utils/: __init__.py  difference.py  get_docs.py
